objects/project_cloud__Allocation_Skill__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Allocation_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The parent Allocation Group of the Allocation Skill, represents the parent Work Type of the skill/secondary Work Type</inlineHelpText>
        <label>Allocation Group</label>
        <referenceTo>project_cloud__Allocation_Group__c</referenceTo>
        <relationshipLabel>Allocation Skills</relationshipLabel>
        <relationshipName>Allocation_Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Quick_Allocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Set when a user is allocated to the project using project level resourcing (Quick Subscribe)</inlineHelpText>
        <label>Quick Allocation</label>
        <referenceTo>project_cloud__Quick_Allocation__c</referenceTo>
        <relationshipLabel>Allocation Skills</relationshipLabel>
        <relationshipName>Allocation_Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Work_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The parent secondary Work Type of the Allocation Skill</inlineHelpText>
        <label>Work Type</label>
        <referenceTo>project_cloud__Work_Type__c</referenceTo>
        <relationshipLabel>Allocation Skills</relationshipLabel>
        <relationshipName>Allocation_Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Allocation Skill</label>
    <nameField>
        <displayFormat>ASK-{0}</displayFormat>
        <label>Allocation Skill Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>